# advent-of-code-2021

./: .gitignore  Cargo.toml
task-01_1/: Cargo.toml
task-01_1/src/: main.rs
task-01_2/: Cargo.toml
task-01_2/src/: main.rs
task-02_1/: Cargo.toml
task-02_1/src/: main.rs
task-02_2/: Cargo.toml
task-02_2/src/: main.rs
task-03_1/: Cargo.toml
task-03_1/src/: main.rs
task-03_2/: Cargo.toml
task-03_2/src/: main.rs
task-04_1/: Cargo.toml
task-04_1/src/: main.rs
task-04_2/: Cargo.toml
task-04_2/src/: main.rs
task-05_1/: Cargo.toml
task-05_1/src/: main.rs
task-05_2/: Cargo.toml
task-05_2/src/: main.rs
task-06_1/: Cargo.toml
task-06_1/src/: main.rs
task-06_2/: Cargo.toml
task-06_2/src/: main.rs
task-07_1/: Cargo.toml
task-07_1/src/: main.rs
task-07_2/: Cargo.toml
task-07_2/src/: main.rs
task-08_1/: Cargo.toml
task-08_1/src/: main.rs
task-08_2/: Cargo.toml
task-08_2/src/: main.rs
task-09_1/: Cargo.toml
task-09_1/src/: main.rs
task-09_2/: Cargo.toml
task-09_2/src/: main.rs
task-10_1/: Cargo.toml
task-10_1/src/: main.rs
task-10_2/: Cargo.toml
task-10_2/src/: main.rs
task-11_1/: Cargo.toml
task-11_1/src/: main.rs
task-11_2/: Cargo.toml
task-11_2/src/: main.rs
task-12_1/: Cargo.toml
task-12_1/src/: main.rs
task-12_2/: Cargo.toml
task-12_2/src/: main.rs
task-13_1/: Cargo.toml
task-13_2/: Cargo.toml
task-14_1/: Cargo.toml
task-14_2/: Cargo.toml
task-15_1/: Cargo.toml
task-15_2/: Cargo.toml
task-16_1/: Cargo.toml
task-16_2/: Cargo.toml
task-17_2/: Cargo.toml
(+9 files in other folders)
