[workspace]
members = [
    "task-01_1",
    "task-01_2",
    "task-02_1",
    "task-02_2",
    "task-03_1",
    "task-03_2",
    "task-04_1",
    "task-04_2",
    "task-05_1",
    "task-05_2",
    "task-06_1",
    "task-06_2",
    "task-07_1",
    "task-07_2",
    "task-08_1",
    "task-08_2",
    "task-09_1",
    "task-09_2",
    "task-10_1",
    "task-10_2",
    "task-11_1",
    "task-11_2",
    "task-12_1",
    "task-12_2",
    "task-13_1",
    "task-13_2",
    "task-14_1",
    "task-14_2",
    "task-15_1",
    "task-15_2",
    "task-16_1",
    "task-16_2",
    "task-17_2",
]
